compiler/src/test/resources/amyc/parser/failing/IfPrecedence.grading.amy
object IfPrecedence
  if (true) { 1 } else { 0 } + 42
end IfPrecedence